--- a/.classpath
+++ b/.classpath
@@ -70,7 +70,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/oer-java-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/commons-lang3-3.13.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/google-cloud-translate-2.20.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/poi/lib/log4j-api-2.17.2.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins_aparte/jsoup-1.16.2.jar"/>
@@ -83,6 +82,12 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/controlsfx-samples-11.2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/controlsfx-9.0.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/sqlite-jdbc-3.45.3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/selenium-java-4.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/commons-lang3-3.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/brotli-1.3.3.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/rhino-1.7.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
