--- a/.classpath
+++ b/.classpath
@@ -89,5 +89,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/rhino-1.7.15.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/httpclient5-5.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
