--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -91,5 +91,6 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/rhino-1.7.15.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/httpclient5-5.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/okhttp-5.0.0-alpha.14.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/Plugins/slf4j-log4j12-1.7.32.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
